--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.20.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "firebase-admin": "^11.3.0",
         "fs": "^0.0.1-security",
         "http": "^0.0.1-security",
+        "jsonwebtoken": "^9.0.0",
         "nodemon": "^2.0.20",
         "socket.io": "^4.5.4"
     }
